Gateway_API/HTTPRoute1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-to-backend
spec:
  parentRefs:
  - name: ecommerce-gateway
  rules:
  - matches:
    - path:
        type: Prefix
        value: "/api"
    backendRefs:
    - name: backend-service
      port: 8080
